--- a/frontend/src/assets/scss/base/_base.scss
+++ b/frontend/src/assets/scss/base/_base.scss
@@ -25,7 +25,8 @@ html {
 
 body {
     box-sizing: border-box;
-    background-color: $clr-grey-0;
+    // background-color: $clr-grey-0;
+    background-color: $gray-100;
     font-family: $main-font-family;
 }
 
