--- a/frontend/src/assets/scss/abstracts/_typography.scss
+++ b/frontend/src/assets/scss/abstracts/_typography.scss
@@ -1,34 +1,38 @@
 // Titles
 h1 {
-    font-size: rem(36px);
-    line-height: rem(48px);
+    font-size: 3.6rem;
+    line-height: 4.8rem;
 }
 
 h2 {
-    font-size: rem(28px);
-    line-height: rem(36px);
+    font-size: 2.8rem;
+    line-height: 3.6rem;
 }
 
 h3 {
-    font-size: rem(20px);
-    line-height: rem(24px);
+    font-size: 2rem;
+    line-height: 2.4rem;
+    font-weight: normal;
 }
 
 h4 {
-    font-size: rem(18px);
-    line-height: rem(24px);
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+    font-weight: normal;
 }
 
 h5 {
-    font-size: rem(12px);
-    line-height: rem(24px);
+    font-size: 1.2rem;
+    line-height: 2.4rem;
     text-transform: uppercase;
-    letter-spacing: rem(1px);
+    letter-spacing: 1rem;
+    font-weight: normal;
 }
 
 h6 {
-    font-size: rem(10px);
-    line-height: rem(18px);
+    font-size: 1rem;
+    line-height: 1.8rem;
     text-transform: uppercase;
-    letter-spacing: rem(1.2px);
+    letter-spacing: 1.2rem;
+    font-weight: normal;
 }
