--- a/frontend/src/assets/scss/abstracts/_variables.scss
+++ b/frontend/src/assets/scss/abstracts/_variables.scss
@@ -6,7 +6,7 @@
 
 
 // Colors
-$clr-white:    #fff !default;
+$white:    #fff !default;
 $white-transparent: #ffffffbd;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
@@ -23,18 +23,18 @@ $black:    #000 !default;
 // $indigo:  #6610f2 !default;
 // $purple:  #6f42c1 !default;
 // $pink:    #d63384 !default;
-// $orange:  #fd7e14 !default;
-$blue:    #0d6efd !default;
-$red:     #dc3545 !default;
+$orange:  #fb8c00 !default;
+$blue:    #1867c0 !default;
+$red:     #ff5252 !default;
 $yellow:  #ffc107 !default;
-$green:   #198754 !default;
-$cyan:    #0dcaf0 !default;
+$green:   #4caf50 !default;
+$cyan:    #5cbbf6 !default;
 
 $primary:       $blue !default;
 // $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
-$warning:       $yellow !default;
+$warning:       $orange !default;
 $danger:        $red !default;
 
 $main-font-family: 'Noto Sans', sans-serif;
