--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -1,8 +1,12 @@
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
 @import 'abstracts/i18n-mixins';
+@import 'abstracts/typography';
 // @import 'abstracts/functions';
 
 @import 'base/base';
 @import 'base/utils';
+
+@import 'components/btns';
+@import 'components/alert';
 
