btns - element style

--- a/frontend/src/assets/scss/abstracts/_variables.scss
+++ b/frontend/src/assets/scss/abstracts/_variables.scss
@@ -6,41 +6,97 @@
 
 
 // Colors
-$white:    #fff !default;
+$white:    #ffffff !default;
 $white-transparent: #ffffffbd;
-$gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
-$black:    #000 !default;
+$gray-100: #F5F7FA !default;
+$gray-200: #F2F6FC !default;
+$gray-300: #EBEEF5 !default;
+$gray-400: #E4E7ED !default;
+$gray-500: #DCDFE6 !default;
+$gray-600: #C0C4CC !default;
+$gray-700: #909399 !default;
+$gray-800: #606266 !default;
+$gray-900: #303133 !default;
+$black:    #000000 !default;
 
 // $teal:    #20c997 !default;
 // $indigo:  #6610f2 !default;
 // $purple:  #6f42c1 !default;
 // $pink:    #d63384 !default;
-$orange:  #fb8c00 !default;
-$blue:    #1867c0 !default;
-$red:     #ff5252 !default;
+$orange-primary:  #E6A23C !default;
+$orange-light-100:  #fdf6ec !default;
+$orange-light-200:  #f5dab1 !default;
+$orange-light-300:  #ebb563 !default;
+
+// blue
+$blue-primary:    #409EFF !default;
+$blue-light-100:  #ecf5ff !default;
+$blue-light-200:  #c6e2ff !default;
+$blue-light-300:  #b3d8ff !default;
+$blue-light-400:  #66b1ff !default;
+
+// red
+$red-primary:    #f56c6c !default;
+$red-light-100:  #fef0f0 !default;
+$red-light-200:  #fbc4c4 !default;
+$red-light-300:  #f78989 !default;
+
+// green
+$green-primary:   #67C23A !default;
+$green-light-100:  #f0f9eb !default;
+$green-light-200:  #c2e7b0 !default;
+$green-light-300:  #85ce61 !default;
+
+
+
 $yellow:  #ffc107 !default;
-$green:   #4caf50 !default;
 $cyan:    #5cbbf6 !default;
 
-$primary:       $blue !default;
+$primary:             $blue-primary !default;
+$primary-light-100:   $blue-light-100 !default;
+$primary-light-200:   $blue-light-200 !default;
+$primary-light-300:   $blue-light-300 !default;
+$primary-light-400:   $blue-light-400 !default;
+
 // $secondary:     $gray-600 !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $orange !default;
-$danger:        $red !default;
 
+$success:             $green-primary !default;
+$success-light-100:   $green-light-100 !default;
+$success-light-200:   $green-light-200 !default;
+$success-light-300:   $green-light-300 !default;
+
+$info:              $gray-700 !default;
+$info-light-100:   #f4f4f5 !default;
+$info-light-200:   #a6a9ad !default;
+$info-light-300:   #a6a9ad !default;
+
+$warning:             $orange-primary !default;
+$warning-light-100:   $orange-light-100 !default;
+$warning-light-200:   $orange-light-200 !default;
+$warning-light-300:   $orange-light-300 !default;
+
+$danger:             $red-primary !default;
+$danger-light-100:   $red-light-100 !default;
+$danger-light-200:   $red-light-200 !default;
+$danger-light-300:   $red-light-300 !default;
+
+
+$border-extra-light:    $gray-100;
+$border-lighter:        $gray-200;
+$border-light:          $gray-300;
+$border-base:           $gray-400;
+$placeholder:           $gray-500;
+$secondary-text:        $gray-600;
+$regular-text:          $gray-700;
+$primary-text:          $gray-800;
+$background-color-base: $gray-100;
+
+// fonts
 $main-font-family: 'Noto Sans', sans-serif;
-
 $default-font-size: 1.4rem;
 
+
+// sizes
 $desktop-nav-height: 6rem;
 $footer-nav-height: 5rem;
 
