--- a/frontend/src/assets/scss/components/_btns.scss
+++ b/frontend/src/assets/scss/components/_btns.scss
@@ -14,7 +14,7 @@
   transition: .1s;
   font-weight: 500;
 
-  // 
+  // default size
   padding: 10px 20px;
   font-size: 14px;
   border-radius: 4px;
