--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -7,6 +7,9 @@
 @import 'base/base';
 @import 'base/utils';
 
+// form
+@import 'components/form/input';
+
 @import 'components/btns';
 @import 'components/alert';
 
