--- a/frontend/src/assets/scss/components/form/_input.scss
+++ b/frontend/src/assets/scss/components/form/_input.scss
@@ -1,32 +1,68 @@
-.input {
-  background-color: #fff;
-  background-image: none;
-  border-radius: .4rem;
-  border: 1px solid $gray-500;
-  box-sizing: border-box;
-  color: $gray-800;
-  display: inline-block;
-  font-size: 1.4rem;
-  height: $input-height;
-  line-height: $input-height;
-  outline: none;
-  padding: 0 1.5rem;
-  transition: border-color .2s cubic-bezier(.645,.045,.355,1);
-  width: 100%;
+.app-input {
+  height: calc(#{$input-height} + 1.5rem);
 
-  &:focus {
-    outline: none;
-    border-color: $primary;
+  .input-row {
+    position: relative;
+    display: flex;
+
+    .input {
+      background-color: #fff;
+      background-image: none;
+      border-radius: .4rem;
+      border: 1px solid $gray-500;
+      box-sizing: border-box;
+      color: $gray-800;
+      display: inline-block;
+      font-size: 1.4rem;
+      height: $input-height;
+      line-height: $input-height;
+      outline: none;
+      padding: 0 1.5rem;
+      transition: border-color .2s cubic-bezier(.645,.045,.355,1);
+      width: 100%;
+    
+      &:focus {
+        outline: none;
+        border-color: $primary;
+      }
+    
+      &.input-has-error {
+        border-color: $danger;
+      }
+    
+      &.input-disabled {
+        background-color: $gray-100;
+        border-color: $gray-400;
+        color: $gray-600;
+        cursor: default;
+      }
+    }
   }
 
-  &.input-has-error {
-    border-color: $danger;
+  .prefix,
+  .suffix {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.8rem;
   }
 
-  &.input-disabled {
-    background-color: $gray-100;
-    border-color: $gray-400;
-    color: $gray-600;
-    cursor: default;
+  .prefix {
+    left: 1.5rem;
+  }
+
+  .suffix {
+    right: 1.5rem;
+  }
+
+  &.has-prefix .input {
+    padding-left: 4rem;
+  }
+
+  &.has-suffix .input {
+    padding-right: 4rem;
   }
 }
