--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -20,3 +20,4 @@
 @import 'components/form/input';
 @import 'components/form/toggle';
 @import 'components/form/radio';
+@import 'components/form/checkbox';
