--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @import 'components/loader';
 @import 'components/btns';
 @import 'components/alert';
+@import 'components/card';
 
 // form
 @import 'components/form/input';
