--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -16,6 +16,7 @@
 @import 'components/btns';
 @import 'components/alert';
 @import 'components/card';
+@import 'components/message';
 
 // form
 @import 'components/form/input';
