--- a/frontend/src/assets/scss/components/_btns.scss
+++ b/frontend/src/assets/scss/components/_btns.scss
@@ -168,3 +168,59 @@
   border-radius: 50%;
   padding: 1.2rem;
 }
+
+// txt btns
+.btn-txt {
+  background-color: transparent;
+  border: transparent;
+  color: $primary;
+  padding-left: 0;
+  padding-right: 0;
+
+  &:hover {
+    color: $blue-light-400;
+    border-color: transparent;
+    background-color: transparent;
+  }
+
+  &.btn-success {
+    color: $success;
+
+    &:hover {
+      color: $success-light-300;
+    }
+  }
+
+  &.btn-danger {
+    color: $danger;
+
+    &:hover {
+      color: $danger-light-300;
+    }
+  }
+
+  &.btn-warning {
+    color: $warning;
+
+    &:hover {
+      color: $warning-light-300;
+    }
+  }
+
+  &.btn-info {
+    color: $info;
+
+    &:hover {
+      color: $info-light-300;
+    }
+  }
+
+  &.btn-disabled {
+    color: $gray-700;
+    cursor: default;
+
+    &:hover {
+      color: $gray-700;
+    }
+  }
+}
