menu cmp + move the app components to common

--- a/frontend/src/assets/scss/abstracts/_variables.scss
+++ b/frontend/src/assets/scss/abstracts/_variables.scss
@@ -84,6 +84,8 @@ $regular-text:          $gray-700;
 $primary-text:          $gray-800;
 $background-color-base: $gray-100;
 
+$card-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
+
 // fonts
 $main-font-family: 'Noto Sans', sans-serif;
 $default-font-size: 1.4rem;
