--- a/frontend/src/assets/scss/base/_utils.scss
+++ b/frontend/src/assets/scss/base/_utils.scss
@@ -30,3 +30,11 @@
   font-size: 1.2rem;
   color: $danger;
 }
+
+.rotate-90 {
+  transform: rotate(90deg);
+}
+
+.rotate-180 {
+  transform: rotate(180deg);
+}
