--- a/frontend/src/assets/scss/components/common/_btns.scss
+++ b/frontend/src/assets/scss/components/common/_btns.scss
@@ -54,7 +54,6 @@
   color: $gray-800;
   -webkit-appearance: none;
   text-align: center;
-  box-sizing: border-box;
   outline: none;
   margin: 0;
   transition: .1s;
@@ -62,7 +61,7 @@
 
   // default size
   padding: 1rem 2rem;
-  font-size: 1.4rem;
+  font-size: inherit;
   border-radius: .4rem;
 
   &:hover {
