--- a/frontend/src/assets/scss/abstracts/_variables.scss
+++ b/frontend/src/assets/scss/abstracts/_variables.scss
@@ -83,7 +83,7 @@ $secondary-text:        $gray-600;
 $regular-text:          $gray-700;
 $primary-text:          $gray-800;
 $background-color-base: $gray-100;
-
+$backdrop-color: rgba(96, 98, 102, 0.7);
 $card-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
 
 // fonts
