--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -18,6 +18,7 @@
 @import 'components/common/card';
 @import 'components/common/message';
 @import 'components/common/menu';
+@import 'components/common/drawer';
 
 
 // form
