--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -19,6 +19,7 @@
 @import 'components/common/message';
 @import 'components/common/menu';
 @import 'components/common/drawer';
+@import 'components/common/modal';
 
 
 // form
