--- a/frontend/src/assets/scss/main.scss
+++ b/frontend/src/assets/scss/main.scss
@@ -27,3 +27,4 @@
 @import 'components/form/toggle';
 @import 'components/form/radio';
 @import 'components/form/checkbox';
+@import 'components/form/textarea';
