--- a/frontend/src/assets/scss/base/_base.scss
+++ b/frontend/src/assets/scss/base/_base.scss
@@ -46,3 +46,14 @@ a {
         text-decoration: none;
     }
 }
+
+button, input, select, textarea {
+    font-family: inherit;
+    // font-size: inherit;
+    line-height: inherit;
+    // color: inherit;
+}
+
+button {
+    cursor: pointer;
+}
