--- a/frontend/src/assets/scss/components/form/_input.scss
+++ b/frontend/src/assets/scss/components/form/_input.scss
@@ -8,19 +8,23 @@
     .input {
       background-color: #fff;
       background-image: none;
-      border-radius: .4rem;
+      border-radius: 4px;
       border: 1px solid $gray-500;
       box-sizing: border-box;
       color: $gray-800;
       display: inline-block;
-      font-size: 1.4rem;
+      font-size: inherit;
       height: $input-height;
       line-height: $input-height;
       outline: none;
       padding: 0 1.5rem;
       transition: border-color .2s cubic-bezier(.645,.045,.355,1);
       width: 100%;
-    
+      
+      &:hover {
+        border-color: $gray-600;
+      }
+      
       &:focus {
         outline: none;
         border-color: $primary;
