login page + inputs with labels

--- a/frontend/src/assets/scss/abstracts/_variables.scss
+++ b/frontend/src/assets/scss/abstracts/_variables.scss
@@ -88,6 +88,8 @@ $card-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
 
 // fonts
 $main-font-family: 'Noto Sans', sans-serif;
+$logo-font-family: 'The Nautigal', cursive;;
+
 $default-font-size: 1.4rem;
 
 
@@ -97,4 +99,4 @@ $footer-nav-height: 5rem;
 
 $max-content-width: 60rem;
 
-$input-height: 4rem;
+$input-height: 4.5rem;
