--- a/frontend/src/assets/scss/base/_base.scss
+++ b/frontend/src/assets/scss/base/_base.scss
@@ -28,6 +28,7 @@ body {
     // background-color: $clr-grey-0;
     background-color: $gray-100;
     font-family: $main-font-family;
+    font-size: 1.6rem;
 }
 
 ol, ul, li {
