--- a/frontend/src/assets/scss/components/form/_input.scss
+++ b/frontend/src/assets/scss/components/form/_input.scss
@@ -1,17 +1,18 @@
 .app-input {
   height: calc(#{$input-height} + 1.5rem);
-
-  .input-row {
+  width: 100%;
+  
+  .app-input-inner {
     position: relative;
     display: flex;
 
     .input {
-      background-color: #fff;
+      background-color: $white;
       background-image: none;
       border-radius: 4px;
       border: 1px solid $gray-500;
       box-sizing: border-box;
-      color: $gray-800;
+      color: $gray-900;
       display: inline-block;
       font-size: inherit;
       height: $input-height;
@@ -41,6 +42,24 @@
         cursor: default;
       }
     }
+
+    &.small-placeholder {
+      .input {
+        padding: 1rem 1.5rem 0 1.5rem;
+      }
+      .app-input-placeholder {
+        transform: scale(.83333) translate(1.5rem, .5rem);
+      }
+    }
+  }
+
+  .app-input-placeholder {
+    display: block;
+    position: absolute;
+    font-size: 1.2rem;
+    color: $gray-700;
+    transform: translate(1.5rem, 1.4rem);
+    transition: all .3s;
   }
 
   .prefix,
