--- a/frontend/src/assets/scss/base/_animations.scss
+++ b/frontend/src/assets/scss/base/_animations.scss
@@ -30,3 +30,17 @@
       transform: rotate(1turn);
   }
 }
+
+@keyframes rotating2 {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(1turn);
+  }
+
+  100% {
+    transform: rotate(2deg);
+  }
+}
