--- a/frontend/src/assets/scss/components/common/_menu.scss
+++ b/frontend/src/assets/scss/components/common/_menu.scss
@@ -51,6 +51,7 @@
   font-weight: 500;
   display: block;
   padding: .8rem 1.7rem;
+  width: 100%;
 
   &:hover {
     background-color: $background-color-base;
